# open-changshu-dialect

./: README.md  pyproject.toml
.opencode/skills/changshu-dialect/: SKILL.md
dataset/: slang.yaml  syntax.md  vocab-short.yaml
scripts/: ocr_batch.py  ocr_layout.py  ocr_vlm.py
